# xmonad

./: CMakeLists.txt  ConditionalKeys.hs  LICENSE  README.md  Xdefaults  Xdefaults-retina15.4  Xdefaults-retina27  Xdefaults.custom  Xmodmap  bashrc  install  xinitrc  xinitrc.custom  xmobarrc  xmobarrc.custom  xmonad.hs  xmonad.hs.custom
config/: Xdefaults  Xmodmap  xinitrc  xmobarrc
config/xmonad/: xmonad.hs
xmonad/: xmonad.hs
